# Market-Sim

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  market-sim.py  market_sim.sh  order.py  orderbook.py  pyproject.toml  stock.py
.claude/rules/: database.md  engine.md  frontend.md  testing.md
.github/workflows/: ci.yml
backend/: agent.py  config.py  main.py
backend/api/: auth.py  dependencies.py  leaderboard.py  market.py  portfolio.py  rate_limit.py  trading.py
backend/bots/: market_maker.py
backend/core/: order.py  trade.py  user.py
backend/db/: crud.py  database.py  models.py
backend/engine/: exchange.py  matching_engine.py  orderbook.py
backend/ws/: manager.py
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  BUSINESS_MODEL.md  CONTRIBUTING.md  DEPLOYMENT.md  PRODUCTION_PLAN.md  TOURNAMENT_SPEC.md  production-evaluation.md
examples/: simple_agent.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/__tests__/: routing.test.tsx
frontend/src/api/: client.ts  ws.ts
frontend/src/api/__tests__/: client.test.ts  ws.test.ts
frontend/src/components/: ErrorBoundary.tsx  Navbar.tsx  OrderBookView.tsx  OrderForm.tsx  PriceCard.tsx  PriceChart.tsx  Spinner.tsx  Toast.tsx  TradeHistory.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: Dashboard.tsx  History.tsx  Leaderboard.tsx  Login.tsx  Portfolio.tsx  Register.tsx  Ticker.tsx
frontend/src/stores/: useStore.ts
frontend/src/test/: mocks.ts  setup.ts
sdk/: pyproject.toml
sdk/marketsim/: __init__.py  client.py  models.py  ws.py
src/: agent.py  main.py  matching_engine.py  order.py  orderbook.py  trade.py
src/config/: settings.py
src/core/: order.py  trade.py  user.py
src/engine/: exchange.py  matching_engine.py  orderbook.py
tests/: conftest.py  test_api.py  test_exchange.py
(+17 files in other folders)
