[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-sim"
version = "0.0.1"
authors = [
  { name="BerkZerker"},
]
description = "A market simulation tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/user/market-sim"
"Bug Tracker" = "https://github.com/user/market-sim/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
market-sim = "main:main"
